--- a/meta/main.yml
+++ b/meta/main.yml
@@ -32,10 +32,10 @@ galaxy_info:
   #
   # platforms is a list of platforms, and each platform has a name and a list of versions.
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
+   platforms:
+   - name: EL
+     versions:
+     - 7
   #   - 25
   # - name: SomePlatform
   #   versions:
